# attys-scope

./: AttysComm.cpp  AttysComm.h  Attys_Scope.vcxproj  Attys_Scope.vcxproj.filters  CMakeLists.txt  COPYING  COPYING.rtf  Makefile  QTDark.stylesheet  README  README.md  acceleration.cpp  acceleration.h  application.qrc  attys-scope.cpp  attys-scope.h  attys-scope.pro  attys-scope.sln  attys-scope.vcxproj  attys-scope.vcxproj.filters  attys_scope  attys_scope.cpp  attys_scope.h  attys_scope.pro  attys_scope.sln  attys_scope.vcxproj  attys_scope.vcxproj.filters  attysapp.rc  attysscope.cpp  attysscope.h  attysscope.pro  attysscope.sln  attysscope.vcxproj.filters  attysscope.xpm  audiobeep.cpp  audiobeep.h  bandstop.cpp  bandstop.h  base64.c  base64.h  (+35 more)
data_format/: README  dataformat.odt  plot_demo_data.py
installer/: Setup.vdproj  attys_scope.rtf  installer.vdproj
python/: README.md  attys_scope_plugin_comm.py  ecg_analysis.py  iir_filter.py  mydata.tsv  plot_demo_data.py  plugin_bargraph.py  plugin_dino_emg_game.py  plugin_ecg.py  plugin_eeg.py  plugin_emg.py  plugin_heartrate.py  plugin_plot.py  plugin_power.py  plugin_realtime_plot.py  plugin_realtime_plot_pyqtgraph.py  plugin_spectrum.py  realtime_bargraph.py  realtime_heartrate.py  realtime_plot.py  realtime_spectrum.py  realtime_temperature.py
python/stdin_pipe/: pipetest.py  realtime_plot.py
python/udp/: realtime_bargraph.py  realtime_plot.py  realtime_spectrum.py  realtime_spectrum_2attys.py  realtime_temperature.py
unreal/: AttysActor.cpp  AttysActor.h  MyAttysActor.cpp  MyAttysActor.h  README.md
